--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <main>
             <aside>
                 <img class="nyil" id="jobb" src="Pictures/arrow.svg" alt="nyil">
-            <script src="Pictures/arrow.png"></script>
             </aside>
-            <img class="nagy" src="Pictures/mercedes-1.jpg" alt="Mercedes">
+            <img id="photo">
+            <div class="gery-container">
+                <h1 id="photo-title"></h1>
+                <p id="photo-description"></p>
+            </div>
             <aside>
                 <img class="nyil" id="bal" src="Pictures/arrow.svg" alt="nyil">
             </aside>
+            
         </main>
     </div>
 
