--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!--szöveg forrás: https://formula.hu/f1/2019/11/28/itt-a-hivatalos-2020-as-pilotafelallas-->
 </head>
 <body>
     <div>
@@ -20,8 +22,10 @@
             <aside>
                 <img class="nyil" id="bal" src="Pictures/arrow.svg" alt="nyil">
             </aside>
-            
         </main>
+        <div class="container">
+            
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
